pushing to get back to master

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+<h1>Turned up</h1>
+<h2>Search.Book.<i class="fas fa-music"></i></h2>
+
+</div>
+
