--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= yield %>
+    <div class="page-body">
+      <%= yield %>
+    </div>
   </body>
 </html>
