--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
     <% if current_user %>
       <%= "hello world" %>
     <% else %>
-      <a href="/sign-in" class="btn sign-in">Log in</a>
+      <a href="users/sign_in" class="btn sign-in">Log in</a>
     <% end %>
   </div>
 </div>
