--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -9,3 +9,22 @@
     color: $pink;
   }
 }
+
+.search-form {
+  padding-top: 18px;
+
+  .search-form-input {
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  }
+  .search-form-btn {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border: black;
+  background-color: black;
+  color: white;
+   &:hover {
+    color: $pink;
+   }
+  }
+}
