--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,12 +1,30 @@
-.btn {
+.btn-dark {
   margin-right: 16px;
   padding: 4px 16px;
   background-color: black;
   color: white;
   border-radius: 40px;
   font-family: $sub-title;
+  transition: 0.3s;
   &:hover {
     color: $pink;
+    text-decoration: none;
+  }
+}
+
+.btn-light {
+  margin-right: 16px;
+  padding: 4px 16px;
+  background-color: white;
+  color: black;
+  border-radius: 40px;
+  font-family: $sub-title;
+  border: 1px solid black;
+  transition: 0.3s;
+  &:hover {
+    color: $pink;
+    text-decoration: none;
+    border: 1px solid black
   }
 }
 
@@ -23,6 +41,7 @@
   border: black;
   background-color: black;
   color: white;
+  transition: 0.3s;
    &:hover {
     color: $pink;
    }
