Added Spacing to the edit page

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,4 +1,6 @@
-<%= simple_form_for([@artist, @booking]) do |f| %>
-  <%= f.input :confirmed %>
-  <%= f.button :submit %>
-<% end %>
+<div class="p-5">
+  <%= simple_form_for([@artist, @booking]) do |f| %>
+    <%= f.input :confirmed %>
+    <%= f.button :submit %>
+  <% end %>
+</div>
