--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,9 @@
 
   <h1><%= @user.artist_name %></h1>
 
-  <p><img src="<%= @user.photo %>" style="width:600px;height:400px";></p>
+  <p><%= cl_image_tag @user.avatar.key, :radius=>"max" %></p>
 
-  <p><%#= cl_image_tag @user.photo.key %></p>
+  <p><%= cl_image_tag @user.photo.key %></p>
 
   <p><%= @user.description %></p>
   <p><%= @user.location %></p>
@@ -17,7 +17,7 @@
 
 <h1><%= @user.user_name %></h1>
 
-  <p><%= cl_image_tag @user.avatar.key %></p>
+  <p><%= cl_image_tag @user.avatar.key, :radius=>"max" %></p>
   <p><%= @user.email %></p>
   <p><strong>Bookings</strong></p>
 
@@ -39,7 +39,8 @@
       <h4><%= "★" * review.rating %><%= "☆" * (5 - review.rating) %></h4>
       <h4><%= "Posted by #{review.user.user_name}" %></h5>
       <p><%= review.content %></p>
-        <% if review.user_id == current_user.id %>
+        <% current_user.nil? ? u = false : u = current_user.id %>
+        <% if review.user_id == u %>
           <%= link_to "Delete review", review_path(review), method: :delete %> |
           <%= link_to "Edit your review",  edit_review_path(review) %>
         <% end %>
