--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,16 @@
 
   <h1><%= @user.artist_name %></h1>
 
-  <p><img src="<%= @user.photo %>" style="width:600px;height:400px";></p>
+  <!-- <p><img src="<%= @user.photo %>" style="width:600px;height:400px";></p> -->
 
-  <p><%#= cl_image_tag @user.photo.key %></p>
+  <% @user.photos.each do |photo| %>
+  <%= climage_tag photo.key %>
+  <% end %>
+
+ <!--  <p><%#= cl_image_tag @user.photos.key %></p> -->
+
+
+
 
   <p><%= @user.description %></p>
   <p><%= @user.location %></p>
