--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,8 +16,8 @@
 <% else %>
 
 <h1><%= @user.user_name %></h1>
-
-  <p><%= cl_image_tag @user.avatar.key, :radius=>"max" %></p>
+  <% @user.avatar.attached? ? avatar_key = @user.avatar.key : avatar_key = "v4yr2mopirs85v96tbbc2mxfiarp"%>
+  <p><%= cl_image_tag avatar_key, :radius=>"max" %></p>
   <p><%= @user.email %></p>
   <p><strong>Bookings</strong></p>
 
