fixed devise sign_in/out and sign_up with username

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
           <%= link_to "Profile", edit_user_path(current_user), class: "dropdown-item" %>
           <%= link_to "Bookings", user_bookings_path(current_user), class: "dropdown-item" %>
           <div class="dropdown-divider"></div>
-          <%= link_to "Sign out", destroy_user_session_path, class: "dropdown-item" %>
+          <%= link_to "Sign out", destroy_user_session_path, method:"delete", class: "dropdown-item" %>
         </div>
       </div>
     <% else %>
