--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -5,7 +5,7 @@
     <div class="search-form">
       <%= form_with(url: "/search", method: "get") do %>
         <%= text_field_tag 'search', nil, placeholder: "  Enter your location", :class => "search-form-input"  %>
-        <%= submit_tag "Search", :class => "search-form-btn" %>
+        <%= link_to "Search", users_path, class: "search-form-btn" %>
       <% end %>
     </div>
   </div>
