--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="artist-card">
   <% @artists.each do |artist| %>
-    <img src='<%= artist.photo %>' style="width:300px;height:200px";>
+    <p><%= cl_image_tag artist.photo.key, :width => 300 %></p>
     <p><strong><%= link_to artist.artist_name, user_path(artist) %></strong></p>
     <p><%= artist.location %></p>
     <span><%= artist.genre %></span>
