--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,20 @@
-<div class="d-flex">
-  <% @artists.each do |artist| %>
-  <div class="card" style="width: 18rem;">
+
+
+
+<div class="listings">
+   <% @artists.each do |artist| %>
+  <div class="card-small">
   <%= cl_image_tag artist.photo.key, :width => 300 %>
   <div class="card-body">
-    <h5 class="card-title"><%= link_to artist.artist_name, user_path(artist) %></h5>
+    <h5><%= link_to artist.artist_name, user_path(artist) %></h5>
     <h6><%= artist.location %></h6>
-    <p class="card-text"><%= artist.description %></p>
-    <%= link_to "Book now", root_path, class: "btn-light" %>
+    <p class="card-small-description"><%= artist.description %></p>
+    <div class="d-flex">
+      <h5>£<%= artist.price %></h5>
+    <%= link_to "Book now", new_user_booking_path(artist), class: "btn-light" %>
+    </div>
   </div>
 </div>
   <% end %>
 
 </div>
-
-
