--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,7 @@
-<%= simple_form_for([@artist, @booking]) do |f| %>
-  <%= f.input :artist_id, as: :hidden, input_html: { value: @artist.id } %>
-  <%= f.input :date %>
-  <%= f.button :submit %>
-<% end %>
+<div class="booking-form">
+  <%= simple_form_for([@artist, @booking]) do |f|%>
+    <%= f.input :artist_id, as: :hidden, input_html: { value: @artist.id } %>
+    <%= f.input :date %>
+    <%= f.button :submit, class: "btn btn-light" %>
+  <% end %>
+</div>
