--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>Edit Profile</h1>
+<h1 class="py-2">Edit Profile</h1>
 
+<div class="edit-form-user d-flex">
 <% if @user.artist == false %>
   <%= simple_form_for @user do |f| %>
     <%= f.input :user_name %>
@@ -16,7 +17,7 @@
     <%= f.input :password %>
     <%= f.input :email %>
     <%= f.input :avatar, as: :file %>
-    <%= f.input :artist %>
+    <%= f.input :artist, label: "I am an artist"%>
     <%= f.input :artist_name %>
     <%= f.input :location %>
     <%= f.input :description %>
@@ -26,7 +27,7 @@
     <%= f.submit "Update details" %>
   <% end %>
 <% end %>
-
+</div>
 
 <!-- create_table "users", force: :cascade do |t|
     t.string "email", default: "", null: false
