--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -12,7 +12,12 @@
   // font-weight: bolder;
   // text-shadow: 0 0 10px rgba(0,0,0,0.7);
 
-
+  .card-image {
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+  }
   h6 {
     font-family: $sub-title;
   }
