--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 <div class="listings">
    <% @artists.each do |artist| %>
   <div class="card-small">
-  <%= cl_image_tag artist.photo.key, :width => 300 %>
+    <div class="card-image" style="background-image: url('https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= artist.photo.key.html_safe %>')"></div>
   <div class="card-body">
     <h5><%= link_to artist.artist_name, user_path(artist) %></h5>
     <h6><%= artist.location %></h6>
