--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -44,6 +44,7 @@
       width: 48px;
       height: 48px;
       background-size: cover;
+      background-position: center;
       border-radius: 50%;
       border: 3px solid black;
       transition: 0.3s;
