--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,8 @@
 
       <div class="dropdown">
         <a class="" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="navbar-user-photo" id="boots" style="background-image: url(<%= current_user.photo %>)"></div>
+          <% current_user.avatar.attached? ? avatar_key = current_user.avatar.key : avatar_key = "v4yr2mopirs85v96tbbc2mxfiarp"%>
+          <div class="navbar-user-photo" id="boots" style="background-image: url('https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= avatar_key.html_safe %>')"></div>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
           <%= link_to "Profile", edit_user_path(current_user), class: "dropdown-item" %>
