buttons styled across Devise pages

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -3,5 +3,5 @@
 <%= simple_form_for(@review) do |f| %>
 <%= f.input :rating %>
 <%= f.input :content %>
-<%= f.submit "submit changes" %>
+<%= f.submit "submit changes", class:"btn-light" %>
 <% end %>
