--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,17 +1,7 @@
 .card-small {
-  // background-size: cover;
-  // background-position: center;
-  // height: 150px;
-  // border-radius: 1px;
-  // box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  // display: flex;
-  // align-items: center;
-  // justify-content: space-around;
-  // font-size: 22px;
-  // color: white;
-  // font-weight: bolder;
-  // text-shadow: 0 0 10px rgba(0,0,0,0.7);
-
+  .card-body {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
   .card-image {
     width: 100%;
     height: 200px;
