Changed the photo upload form to accept single photos, not multiple

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,7 @@
     <%= f.input :description %>
     <%= f.input :genre %>
     <%= f.input :price %>
-    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit "Update details" %>
   <% end %>
 <% end %>
