--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,8 @@
   <p><i class="fas fa-map-marker-alt"></i> <%= @user.location %>, £<%= @user.price %>/night</p>
   <p class="book-now"><%=link_to '<i class=" btn btn-light">Book now</i>'.html_safe, new_user_booking_path(@user) %></p>
   <%#= cl_image_tag @user.avatar.key, :radius=>"max", :width => 150 %>
-  <p class="artist-image"><%= cl_image_tag @user.photo.key %></p>
-
+  <% @user.photo.attached? ? photo_key = @user.photo.key : photo_key = "fp71jjubnm5abb4nx3exwvb5ow4u"%>
+  <p><%= cl_image_tag photo_key %></p>
   <p class="user-description"><%= @user.description %></p>
   <span><%= @user.genre %></span>
 <% else %>
