--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,37 +1,36 @@
 .card-small {
-  .card-body {
-    background-color: rgba(255, 255, 255, 0.1);
-  }
   .card-image {
     width: 100%;
     height: 200px;
     background-size: cover;
     background-position: center;
   }
-  h6 {
-    font-family: $sub-title;
-  }
-
-  a {
-    font-family: $sub-title;
-    color: $pink;
-    transition: 0.3s;
-    &:hover {
-      text-decoration: none;
-      color: white;
+  .card-body {
+    background-color: rgba(255, 255, 255, 0.1);
+    .card-text {
+      h6 {
+      font-family: $sub-title;
+      }
+      a {
+        font-family: $sub-title;
+        color: $pink;
+        transition: 0.3s;
+        &:hover {
+          text-decoration: none;
+          color: white;
+        }
+      }
+      .card-small-description {
+        height: 100px;
+      }
     }
   }
-
-  .card-small-description {
-    height: 140px;
-  }
-
   .d-flex {
+    justify-content: space-between;
+    align-items: center;
     h5 {
       font-family: $sub-title;
       margin: 0;
     }
-    justify-content: space-between;
-    align-items: center;
   }
 }
