--- a/app/views/shared/_userprofile.html.erb
+++ b/app/views/shared/_userprofile.html.erb
@@ -12,7 +12,7 @@
   <div class="user-profile">
     <h1><%= @user.user_name %></h1>
     <% @user.avatar.attached? ? avatar_key = @user.avatar.key : avatar_key = "v4yr2mopirs85v96tbbc2mxfiarp"%>
-    <p><%= cl_image_tag avatar_key, :radius=>"max", :width => 150 %></p>
+    <p><%= cl_image_tag avatar_key, :width => 150 %></p>
     <p><%= @user.email %></p>
   </div>
 <% end %>
