--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,15 +2,14 @@
   <div class="banner-text">
     <h1>Turned up</h1>
     <h2>Search / Book / <i class="fas fa-music"></i></h2>
-    <div class="search-form">
-      <%= form_with(url: "/search", method: "get") do %>
-        <%= text_field_tag 'search', nil, placeholder: "  Enter your location", :class => "search-form-input"  %>
-        <%= link_to "Search", users_path, class: "search-form-btn" %>
-      <% end %>
-    </div>
+      <%= render "shared/search" %>
   </div>
 </div>
 
 
+<%#= form_with(url: "/search", method: "get") do %>
+        <%#= text_field_tag 'search', nil, placeholder: "E.g. The Beatles", :class => "search-form-input"  %>
+        <%#= link_to "Search", users_path, class: "search-form-btn" %>
+      <%# end %>
 
 
