--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="listings">
+<div class="listings log-in">
 
   <% if @artists.count == 0 %>
   <%= "Oops! There are no results for your search! Become an artist or search for another..." %>
