isolated the navbar text style to the logo as it was overwriting the button style

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="nav-bar-left">
     <%= link_to root_path do  %>
-      <h1>turned up</h1>
+      <h1 id="logo">turned up</h1>
     <% end %>
 <%= render "shared/search" unless url_for == root_path %>
   </div>
