--- a/app/assets/stylesheets/components/_page-body.scss
+++ b/app/assets/stylesheets/components/_page-body.scss
@@ -3,7 +3,7 @@
   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://iso.500px.com/wp-content/uploads/2015/07/lombardo_cover.jpeg");
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   color: white;
   min-height: 80vh;
 }
