--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,6 @@
-<div class="row-register">
-  <div class="col-4">
-    <div class="log-in">
-    <h2 class="py-2">Sign up</h2>
-
+<div class="log-in">
+  <div class="log-in-box">
+    <h2>Sign up</h2>
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
 
@@ -29,11 +27,9 @@
         <%= f.button :submit, "Sign up", class:"btn-light" %>
       </div>
     <% end %>
-
     <div class="py-3">
-    <%= render "devise/shared/links" %>
+      <%= render "devise/shared/links" %>
     </div>
 
-    </div>
   </div>
 </div>
