--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="listings log-in">
+<div class="listings ">
 
   <% if @artists.count == 0 %>
   <%= "Oops! There are no results for your search! Become an artist or search for another..." %>
@@ -13,7 +13,7 @@
       <div class="card-body">
         <div class="card-text">
           <div class="card-title">
-            <h4><%= link_to artist.artist_name, user_path(artist), class: "card-link" %></h4>
+            <h4><%= link_to artist.artist_name[0, 20], user_path(artist), class: "card-link" %></h4>
             <h6><%= artist.genre %></h6>
           </div>
           <p class="card-location"><i class="fas fa-map-marker-alt"></i> <%= artist.location %></p>
