Changed defaults & styled confirmation

--- a/app/assets/stylesheets/components/_booking-form.scss
+++ b/app/assets/stylesheets/components/_booking-form.scss
@@ -3,6 +3,16 @@
   padding-top: 16px;
 }
 
+.confirm-booking {
+  color: green;
+  font-size: 12px;
+}
+
+
+.confirm-booking-submit {
+  color: green;
+}
+
 // .edit-form-user {
 //   height: 80vh;
 // }
