--- a/app/views/shared/_userbookings.html.erb
+++ b/app/views/shared/_userbookings.html.erb
@@ -2,17 +2,15 @@
   <h4><strong>Bookings</strong></h4>
   <% @user.booked.each do |booking| %>
     <div class="card-product">
-      <% booking.artist.photo.attached? ? photo_key = booking.artist.photo.key : photo_key = "fp71jjubnm5abb4nx3exwvb5ow4u"%>
-      <img src="https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= photo_key %>" />
+      <% booking.user.avatar.attached? ? user_avatar_key = booking.user.avatar.key : user_avatar_key = "e1tikr33400esm4prcouknjq4xzc"%>
+      <img src="https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= user_avatar_key %>">
       <div class="card-product-infos">
-        <h2><%= booking.artist.artist_name %> | <%= booking.date %></h2>
-        <p><%= booking.artist.description %></p>
-        <div class="p-5">
-          <%= simple_form_for(booking) do |f| %>
-            <%= f.input :confirmed %>
-            <%= f.button :submit %>
-          <% end %>
-        </div>
+        <h2><%= booking.user.user_name %></h2>
+        <p><%= booking.date %></p>
+        <%= simple_form_for(booking) do |f| %>
+          <%= f.input :confirmed, label: "Confirm booking", label_html: { class: 'confirm-booking' } %>
+          <%= f.button :submit, label_html: { class: 'confirm-booking-submit' } %>
+        <% end %>
       </div>
     </div>
   <% end %>
@@ -20,17 +18,16 @@
   <h4><strong>Bookings</strong></h4>
   <% @user.bookings.each do |booking| %>
     <div class="card-product">
-      <% booking.user.avatar.attached? ? photo_key = booking.user.photo.key : photo_key = "fp71jjubnm5abb4nx3exwvb5ow4u"%>
-      <img src="https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= photo_key %>" />
+      <% booking.artist.photo.attached? ? booking_photo_key = booking.artist.photo.key : booking_photo_key = "by547qwzb0s6o2qefa0i31o7fpeb"%>
+      <img src="https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= booking_photo_key %>" />
       <div class="card-product-infos">
-        <h2><%= booking.artist.artist_name %></h2>
+        <h2><%= booking.artist.artist_name%> | <%= booking.date %></h2>
         <p><strong><%= booking.date %></strong></p>
         <% if booking.confirmed  %>
           <p style="color: #FF0083;"><i class="fas fa-check-circle"></i> Confirmed</p>
         <% else %>
           <p style="color: orange;"><i class="fas fa-question-circle"></i> Pending</p>
         <% end %>
-
       </div>
     </div>
   <% end %>
