--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -25,7 +25,7 @@
 
   .card-image {
     width: 100%;
-    height: 200px;
+    height: 15rem;
     background-size: cover;
     background-position: center;
   }
@@ -35,6 +35,8 @@
     justify-content: space-between;
     align-items: center;
     margin: 0;
+    // overflow: hidden;
+    height: 3rem;
   }
 
   .card-location {
