--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,6 +23,7 @@
     <%= f.input :description %>
     <%= f.input :genre %>
     <%= f.input :price %>
+    <%= f.input :spotify_link %>
     <%= f.input :photo, as: :file %>
     <%= f.submit "Update details" %>
   <% end %>
