card sizes, buttons and search bar appearance fixed

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -58,4 +58,13 @@
   }
 }
 
+.devise-links {
+  color: white;
+  transition: 0.3s;
+  &:hover {
+    text-decoration: none;
+    color: $pink;
+  }
+}
+
 
